--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Great Britain. Royal Navy -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'Midshipmen -- Juvenile fiction'
+- GITenberg
 title: Fitz the Filibuster
 url: http://www.gutenberg.org/ebooks/21309
